<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.custom.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_zhanghao"
            android:textColor="@color/text_bag"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/_setusername" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.custom.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_password"
            android:textColor="@color/text_bag"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/_setpasw"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_teacher"
            android:textColor="#000000"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/_student"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <com.custom.view.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/_login"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.custom.view.CustomTextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_cragress"
            android:textColor="@color/text_bag"
            android:textSize="20sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:background="#000000" />

        <com.custom.view.CustomTextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_forgot_pasw"
            android:textColor="@color/text_bag"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>